CHANGES IN FLTK 1.1.8

	- Fixed floating point value formatting
	  for Fl_Spinner (STR #1331)
	- Fixed Fl_Positioner callback 
	  when released (STR #1387)
	- Fixed WIN32 zero size window issue (STR #1387)
	- Fixed Sudoku window positioning (STR #1398)
	- Fluid Code Declarations can now handle
	  C++ style comments (STR #1383)
	- Fixed uninitialized data in OS X and WIN32 
	  timout functions (STR #1374).
	- Fixed speed issues when measuring text on OS X
	  with Quartz (STR #1386).
	- Fixed focus issues on OS X (STR #1377)
	- Optional precission argument when storing floats or 
	  doubles in a Preferences file (STR #1381)
	- Fixed callback not called when using arrow keys
	  in Fl_Slider (STR #1333)
	- Changing the shorcut of a widget in fluid now marks
	  the document as dirty (STR #1382)
	- Fl_Text_Editor now correctly handles middle mouse
	  clicks (STR #1384)
	- Added some GLUT4 functions (STR #1370)
	- Added "context_changed()" function for OpenGL windows
	  which allows efficent texture loading (STR #1372)
	- Added missing "const" to GLUT call (STR #1371)
	- Fixed stray FL_RELEASE events after clicking system
	  areas on OS X (STR #1376)
	- FLUID now only writes definitions of "o" and "w"
	  variables as needed, reducing the number of "variable
	  is shadowed" warnings from GCC.
	- Added access to Xft font pointer (STR #1328)
	- Fixed endianness in OS X mouse cursor graphics (STR
	  #1348)
	- Fixed crash on mixed use of keyboard and mouse for
	  Fl_Menu_Button (STR #1356)
	- Fixed Fl_Window::visible() and shown() for OS X
	  (STR #1341)
	- Fixed Fl_Window::copy_label() losing copy (STR #1332)
	- Documentation fixes (STR #1336, STR #1329, STR #1339,
	  STR #1340)
	- Added support for floating point Fl_Spinner in the
	  API, documentation, and Fluid (STR #1331)
	- Repeat button now cancels timeout if it should get 
	  deactivated during a callback (STR #1330)
	- Added support for assigning Fl_Menu_Items to array 
	  variables in Fluid (STR #1280)