@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Avoiding problems with some platforms that don't 
+	  implement hypot() (STR #1366)
 	- Fixed floating point value formatting
 	  for Fl_Spinner (STR #1331)
 	- Fixed Fl_Positioner callback 
